fix text alignment in experience section

--- a/gh-pages/src/bootstrap.css
+++ b/gh-pages/src/bootstrap.css
@@ -11014,7 +11014,7 @@ a.text-dark:focus {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
   background-color: #1c2a43 !important;
-  border-bottom: 3px solid white;
+  border-bottom: 3px solid #ffffff30;
 }
 
 #mainNav .navbar-brand {
