--- a/gh-pages/src/components/Experience/experience.scss
+++ b/gh-pages/src/components/Experience/experience.scss
@@ -2,6 +2,7 @@ ul.timeline {
     list-style-type: none;
     position: relative;
 }
+
 ul.timeline:before {
     content: ' ';
     background: #d4d9df;
@@ -12,11 +13,12 @@ ul.timeline:before {
     height: 100%;
     z-index: 400;
 }
+
 ul.timeline > li {
     margin: 20px 0;
     padding-left: 20px;
-    text-align: justify;
 }
+
 ul.timeline > li:before {
     content: ' ';
     background: white;
@@ -28,4 +30,8 @@ ul.timeline > li:before {
     width: 20px;
     height: 20px;
     z-index: 400;
+}
+
+.experience-details {
+    padding: 1rem;
 }
